--- a/includes/style.css
+++ b/includes/style.css
@@ -100,17 +100,15 @@
 		font-size:1.2em
 	}
 	
-	/* Carla doesn't like linunder
+	/* Carla doesn't like linunder */
 	.ui-multiselect-checkboxes li.ui-multiselect-optgroup-label {
-    	border-top: 1px solid;
-    	border:bottom: none;
-    	font-weight: bold;
-    	text-align: center;
+    	border-top: 1px solid !important;
+    	border:bottom: none !important;
 	}
 	/* visited links in multiselect are strange, so override them */
 	
 	.ui-helper-reset a, ui-helper-reset a:visited {
-		color:blue; !important;
+		color:blue !important;
 	}
 	
 	
