--- a/includes/style.css
+++ b/includes/style.css
@@ -78,6 +78,7 @@
 	body {
 		font-family:Arial, Helvetica, sans-serif;
 		background-color:#FFFFFF;
+		 font-size: 16px;
 	}
 
 	/* general-purpose big red thingee */	
