--- a/includes/style.css
+++ b/includes/style.css
@@ -78,8 +78,18 @@
 	body {
 		font-family:Arial, Helvetica, sans-serif;
 		background-color:#FFFFFF;
+		/* google mobile */
 		 font-size: 16px;
 	}
+
+        /* google mobile */
+    .small {
+  font-size: 12px; /* 75% of the baseline */
+}
+
+.large {
+  font-size: 20px; /* 125% of the baseline */
+}
 
 	/* general-purpose big red thingee */	
 	.importantNotification {
